[package]
name = "advent_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.10.0-alpha.1", features = [] }
chrono = "0.4.31"
itertools = { version = "0.12.0", features = [] }

[[bin]]
name="advent_23"
path="src/main.rs"
